--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-<meta charset ="utf-8">
-<meta name ="description" content ="オホーツク共和国の架空の政党">
-<link rel ="icon" href="icon/rainbow.ico">
-<link rel ="stylesheet" href="styles/Stylesheet1.css">
-<title>改憲進歩党｜オホーツクを前進させる。</title>
-</head>
-<body>
-<div class ="main">
-<h1>オホーツクを前進させる</h1>
-<h3>政策</h3>
-<ul>
-<li>道州制の導入</li>
-<li>国際関係の強化</li>
-<li>教育に革命を</li>
-</ul>
-<div class="seemore">
-<a href="sites/policy.html"></a>
-</div>
-</div>
-</body>
+  <head>
+    <meta charset ="utf-8">
+    <meta name ="description" content ="オホーツク共和国の架空の政党">
+    <link rel ="icon" href="icon/rainbow.ico">
+    <link rel ="stylesheet" href="styles/Stylesheet1.css">
+    <title>改憲進歩党｜オホーツクを前進させる。</title>
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <div class ="main">
+      <h1>オホーツクを前進させる</h1>
+      <h3>政策</h3>
+      <ul>
+        <li>道州制の導入</li>
+        <li>国際関係の強化</li>
+        <li>教育に革命を</li>
+      </ul>
+      <div class="seemore">
+        <a href="sites/policy.html"></a>
+      </div>
+      <h3>実績</h3>
+      <ul>
+        <li>404 not found</li>
+      </ul>
+      <div class"seemore">
+        <a href="sites/result.html">
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
