--- a/header.html
+++ b/header.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
-<header class="Header">
-<a href ="index.html">
-<img src="images/namelogo.png" height ="50px"width="auto">
-</a>
-</header>
-</body>
+  <head>
+    <link rel="stylesheet" href="Header.css">
+  </head>
+  <body>
+    <header class="Header">
+      <a href ="index.html">
+        <img src="images/namelogo.png" height ="50px"width="auto">
+      </a>
+    </header>
+  </body>
 </html>
