--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class ="main">
+      <div id="header"></div>
       <h1>オホーツクを前進させる</h1>
       <h3>政策</h3>
       <ul>
