--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <li>404 not found</li>
       </ul>
       <div class"seemore">
-        <a href="sites/result.html">
-        </a>
+        <a href="sites/result.html"></a>
       </div>
     </div>
     <div id="footer"></div>
