--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="style/Header.css">
   </head>
   <body>
     <header class="Header">
