--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="style/Footer.css">
 <footer class="Footer">
   <a href="sites/policy.html">政策</a>
   <a href="sites/result.html">実績</a>
@@ -6,3 +5,4 @@
   <a href="sites/nyutou.html">入党申請</a>
   <a href="sites/toin.html">党員</a>
   <a href="sites/contact.html">お問い合わせ</a>
+</footer>
