--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel ="icon" href="icon/rainbow.ico">
     <link rel ="stylesheet" href="styles/Stylesheet1.css">
     <link rel ="stylesheet" href="styles/Header.css">
-    <link rel ="stylesheet" href="styles/Header.css">
+    <link rel ="stylesheet" href="styles/Footer.css">
     <title>改憲進歩党｜オホーツクを前進させる。</title>
     <script src="script.js"></script>
   </head>
