--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <div class ="main">
       <div id="header"></div>
       <h1>オホーツクを前進させる</h1>
+      <div class="policy">
       <h3>政策</h3>
       <ul>
         <li>道州制の導入</li>
         <li>国際関係の強化</li>
         <li>教育に革命を</li>
       </ul>
+      </div>
       <div class="seemore">
         <a href="sites/policy.html"></a>
       </div>
