--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <div class ="main">
       <div id="header"></div>
+      <div class="Headerimg">
       <h1>オホーツクを前進させる</h1>
+      </div>
       <div class="policy">
       <h3>政策</h3>
       <ul>
