--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class ="main">
       <div id="header"></div>
       <div class="Headerimg">
-      <h1>オホーツクを前進させる</h1>
+      <h1><span>オホーツクを前進させる</span></h1>
       </div>
       <div class="policy">
       <h3>政策</h3>
