--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset ="utf-8">
     <meta name ="description" content ="オホーツク共和国の架空の政党">
     <link rel ="icon" href="icon/rainbow.ico">
-    <link rel ="stylesheet" href="styles/Stylesheet1.css">
+    <link rel ="stylesheet" href="styles/index.css">
     <link rel ="stylesheet" href="styles/Header.css">
     <link rel ="stylesheet" href="styles/Footer.css">
     <title>改憲進歩党｜オホーツクを前進させる。</title>
