--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel ="stylesheet" href="styles/Header.css">
     <link rel ="stylesheet" href="styles/Footer.css">
     <title>改憲進歩党｜オホーツクを前進させる。</title>
-    <script src="script.js"></script>
+    <script src="script/HeadFoot.js"></script>
   </head>
   <body>
     <div class ="main">
