--- a/sites/policy.html
+++ b/sites/policy.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset ="utf-8">
     <meta name ="description" content ="オホーツク共和国の架空の政党">
-    <link rel ="icon" href="icon/rainbow.ico">
-    <link rel ="stylesheet" href="styles/Sites.css">
-    <link rel ="stylesheet" href="styles/Header.css">
-    <link rel ="stylesheet" href="styles/Footer.css">
+    <link rel ="icon" href="../icon/rainbow.ico">
+    <link rel ="stylesheet" href="../styles/Sites.css">
+    <link rel ="stylesheet" href="../styles/Header.css">
+    <link rel ="stylesheet" href="../styles/Footer.css">
     <title>改憲進歩党｜オホーツクを前進させる。</title>
     <script src="../script/HeadFoot.js"></script>
   </head>
