--- a/sites/policy.html
+++ b/sites/policy.html
@@ -8,6 +8,6 @@
     <link rel ="stylesheet" href="../styles/Header.css">
     <link rel ="stylesheet" href="../styles/Footer.css">
     <title>改憲進歩党｜オホーツクを前進させる。</title>
-    <script src="../script/HeadFoot.js"></script>
+    <script src="../script/headfoot.js"></script>
   </head>
 </html>
