--- a/sites/policy.html
+++ b/sites/policy.html
@@ -7,7 +7,11 @@
     <link rel ="stylesheet" href="../styles/Sites.css">
     <link rel ="stylesheet" href="../styles/Header.css">
     <link rel ="stylesheet" href="../styles/Footer.css">
-    <title>改憲進歩党｜オホーツクを前進させる。</title>
+    <title>政策</title>
     <script src="../script/headfoot.js"></script>
   </head>
+  <body>
+    <div id="header"></div>
+    <div id="footer"></div>
+  </body>
 </html>
