--- a/sites/contact.html
+++ b/sites/contact.html
@@ -7,7 +7,7 @@
     <link rel ="stylesheet" href="../styles/Sites.css">
     <link rel ="stylesheet" href="../styles/Header.css">
     <link rel ="stylesheet" href="../styles/Footer.css">
-    <title>政策</title>
+    <title>お問い合わせ</title>
     <script src="../script/headfoot.js"></script>
   </head>
   <body>
