--- a/sites/header.html
+++ b/sites/header.html
@@ -1,5 +1,5 @@
     <header class="Header">
       <a href ="index.html">
-        <img src="images/namelogo.png" height ="50px"width="auto">
+        <img src="../images/namelogo.png" height ="50px"width="auto">
       </a>
     </header>
