--- a/sites/policy.html
+++ b/sites/policy.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div id="header"></div>
+    <h1>政策集のpdfをダウンロード</h1>
+    <a download="policy.pdf">こちらからダウンロードできます。</a>
     <div id="footer"></div>
   </body>
 </html>
