--- a/sites/policy.html
+++ b/sites/policy.html
@@ -13,7 +13,7 @@
   <body>
     <div id="header"></div>
     <h1>政策集のpdfをダウンロード</h1>
-    <a download="../policy.pdf">こちらからダウンロードできます。</a>
+    <a href="../policy.pdf">こちらからご覧いただけます。</a>
     <div id="footer"></div>
   </body>
 </html>
