--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="policy">
       <h3>政策</h3>
       <ul>
-        <li>道州制の導入</li>
+        <li>技術の進歩を推進</li>
         <li>国際関係の強化</li>
         <li>教育に革命を</li>
       </ul>
